--- a/client/src/components/education/education.css
+++ b/client/src/components/education/education.css
@@ -23,9 +23,11 @@
   color: blue;
 }
 .education-form {
-  background: #edf2e8;
+  background: #ffffff;
   padding: 10px;
   border-radius: 10px;
+  box-shadow: var(--main-box-shadow);
+  margin: 11px 0 31px 0;
 }
 .education-form div {
   display: flex;
@@ -33,18 +35,31 @@
   background: #f5f8f3;
   justify-content: space-between;
   align-items: center;
-  border-radius: 10px;
-  padding: 3px 10px;
+  border-radius: 5px;
+  padding: 0 0 0 5px;
+}
+.education-form label {
+  box-shadow: 0px 0px 10px -3px #198754;
+  background: #ffffff;
+  padding: 5px;
+  border-radius: 5px;
 }
 .education-form div input,
 .exp-form div input {
   outline: none;
-  border: 1px #bec0bc solid;
+  border: 1px #02b361 solid;
   border-radius: 5px;
-  /* margin: 0 0 0 20px; */
+  margin: 0 0 0 5px;
   flex-grow: 1;
-  padding: 2px 5px;
+  /* border: 1px var(--main-input-border); */
+  padding: 5px;
 }
+/*   outline: none;
+  border: 1px var(--main-input-border);
+  border-radius: 5px;
+  margin: 0 0 0 20px;
+  flex-grow: 1;
+  padding: 5px; */
 .adding-btn {
   flex-grow: 0 !important;
   margin: 5px;
