--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -2,37 +2,61 @@
   position: fixed;
   width: 100%;
   top: 0;
+  box-shadow: var(--main-box-shadow);
+  height: 45px;
   background-color: var(--main-first-child-bg-color);
   z-index: 999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+.top-right {
+  align-items: center;
+  justify-content: space-between;
+}
+.top-middle {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+}
+
 .topbar li a {
   color: #008eff;
 }
-
-.topbar {
-  background-color: #f8f9fa;
+.opener {
+  align-items: center;
+  width: 40px;
+  height: 35px;
+  cursor: pointer;
+  transition: all ease-in-out 0.6s;
 }
 .logo {
   font-family: math;
-  text-shadow: 2px 1px 31px #000000;
-  letter-spacing: 5px;
+  text-shadow: 2px 1px 31px #00f9e2;
   font-weight: 600;
-  justify-content: center;
-  /* font-size: 33px; */
-  align-items: center;
-  display: flex;
+  text-align: center;
+  color: #009688;
 }
 .view-profile-icon {
   display: flex;
-  justify-content: end;
+  /* justify-content: end; */
 }
-.view-profile-icon img {
+/* .view-profile-icon img {
   width: 45px;
   height: 45px;
   border-radius: 50%;
   position: absolute;
   right: 9px;
   top: 0;
-}
-.view-profile-icon {
+} */
+
+.menu {
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  padding-top: 20px;
+  background: white;
+  width: 230px;
+  transition: all ease-in-out 0.5s;
 }
