--- a/client/src/screens/profile/devProfile.css
+++ b/client/src/screens/profile/devProfile.css
@@ -1,10 +1,16 @@
 .profile-parent {
   background: var(--main-bg-color);
-  padding: 0 0 70px 0;
+
   margin: auto;
-  justify-content: space-around;
+
   margin-top: 45px;
-  height: auto;
+  height: calc(100vh -45px);
+  width: 100%;
+}
+.dev-profile {
+  padding: 0 0 50px 0;
+  margin: auto;
+  margin-top: 45px;
 }
 .social-media-parent,
 .about-me-parent,
@@ -85,4 +91,63 @@
   color: rgb(214, 10, 71);
   /* background-color: rgb(0, 195, 255); */
   /* border-radius: 50%; */
+}
+.profile-init {
+  position: relative;
+  background: var(--main-bg-color);
+  padding: 10px;
+  padding-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+.profile-init div {
+  margin: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.profile-init .about-me-title {
+  font-family: sans-serif;
+  border-bottom: 2px #458347 solid;
+  width: max-content;
+  text-align: center;
+  padding: 5px 15px;
+}
+label {
+  font-size: 23px;
+  margin: 5px;
+  color: rgb(247, 85, 27);
+}
+.profile-init input,
+textarea {
+  border: var(--main-input-border);
+  padding: 5px;
+  border-radius: 5px;
+  background: #ffffff;
+}
+.profile-init input,
+textarea {
+  color: rgb(105, 120, 209);
+  font-size: 20px;
+  font-family: monospace;
+  font-weight: 600;
+}
+.profile-init textarea {
+  height: 100px;
+  width: 100%;
+  resize: none;
+  outline: none;
+}
+.edit-btn {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  padding: 0px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px 4px;
+  background-color: honeydew;
+  color: #4caf50;
 }
