--- a/client/src/screens/profile/devProfile.css
+++ b/client/src/screens/profile/devProfile.css
@@ -50,15 +50,49 @@
   width: 180px;
   height: 180px;
   border-radius: 50%;
-  border: 4px rgb(0, 45, 248) solid;
 }
 .img-container {
   width: 180px;
+  position: relative;
   height: 180px;
   border-radius: 50%;
-  border: 4px rgb(0, 211, 248) solid;
+  border: 1px rgb(6, 247, 86) solid;
 }
-
+.change-profile-photo {
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  background: #ce0bff;
+  color: white;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all 1s;
+}
+.change-profile-photo-spinner {
+  pointer-events: none;
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+  background: #ffffff;
+  color: #ff02ec;
+}
+.change-profile-photo:hover {
+  background: #e58efb;
+  color: rgb(0, 0, 0);
+}
+.upload_profile-photo {
+  cursor: pointer;
+  position: absolute;
+  /* bottom: -13px; */
+  width: 48px;
+  /* right: 51px; */
+  background: transparent;
+  pointer-events: none;
+  color: transparent;
+}
+.upload_profile-photo-input {
+  display: none;
+}
 .about-me-parent {
   width: 100%;
   padding: 5px;
@@ -112,16 +146,26 @@
 
 .profile-init-form .about-me-title {
   font-family: sans-serif;
-  border-bottom: 2px #458347 solid;
-  width: max-content;
+  border-bottom: 1px #c3c3c3 solid;
+  /* width: max-content; */
   text-align: center;
   padding: 5px 15px;
+  color: #a7aba6;
+  font-weight: 600;
 }
-/* label {
-  font-size: 23px;
-  margin: 5px;
-  color: rgb(247, 85, 27);
-} */
+.profile-init-form .about-me {
+  color: rgb(94, 90, 90);
+  padding: 5px;
+}
+.profile-init-form .about-me::first-letter {
+  font-size: 30px;
+  color: #009688;
+  font-weight: 600;
+  margin: 3px;
+  font-family: monospace;
+  margin-left: 10px;
+}
+
 .profile-init-form textarea {
   height: 142px;
   width: 100%;
