--- a/client/src/screens/profile/devProfile.css
+++ b/client/src/screens/profile/devProfile.css
@@ -11,6 +11,7 @@
   padding: 0 0 50px 0;
   margin: auto;
   margin-top: 45px;
+  min-height: calc(100vh - 45px);
 }
 .social-media-parent,
 .about-me-parent,
@@ -73,6 +74,12 @@
   position: absolute;
   bottom: 10px;
   right: 20px;
+  background: #ffffff;
+  color: #ff02ec;
+}
+.update-profile-spinner {
+  pointer-events: none;
+
   background: #ffffff;
   color: #ff02ec;
 }
@@ -195,8 +202,15 @@
   padding: 0px;
   border-radius: 5px;
   box-shadow: 0px 0px 0px 4px;
-  background-color: honeydew;
-  color: #4caf50;
+  background-color: #ffffff;
+  color: #1aa295;
+  cursor: pointer;
+  font-size: 1rem;
+}
+.update-boi-spinner {
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
 }
 .edit-profile-actions-parent {
   display: flex;
