some changes in the design

--- a/client/src/components/candidate_components/experience/singleExp.css
+++ b/client/src/components/candidate_components/experience/singleExp.css
@@ -2,6 +2,8 @@
   border-radius: 10px;
   background: #edf2e8;
   margin: 10px;
+  width: 100%;
+  height: 250px;
 }
 .exp-header-spinner {
   background-color: #edf2e8;
