--- a/client/src/components/candidate_components/experience/experience.css
+++ b/client/src/components/candidate_components/experience/experience.css
@@ -1,9 +1,9 @@
 .experience-parent,
 .education-parent {
   background: var(--main-first-child-bg-color);
-  margin: 20px 0 0 0;
   border-radius: 10px;
   padding: 20px;
+  min-height: 360px;
 }
 .experience {
   transition: all 2s;
