--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -1,30 +1,34 @@
 .sidebar-items {
-  background: #f8f9fa;
-  border-radius: 15px;
-  padding: 10px;
-  list-style: none;
-  font-family: monospace;
-}
-.sidebar-items div {
-  align-items: start;
-  margin: 5px;
-  background-color: rgb(237 242 232);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 32px;
+  background: #edf2e8;
   border-radius: 10px;
-  padding: 10px;
+  padding: 5px;
 }
-.sidebar-items div li a {
-  border: 1px #009688 solid;
-  width: 150px;
+.sidebar-items a,
+.logout {
+  margin: 5px;
+  background-color: rgb(250 255 254);
   border-radius: 5px;
-  margin: 5px 0;
+  padding: 3px;
+  width: 75%;
   text-align: center;
-  padding: 5px 0;
-}
-.sidebar-items div li a:hover {
+  letter-spacing: 4px;
+  text-decoration: dashed;
+  font-weight: 600;
+  color: #747b97;
   border: 1px #009688 solid;
-  color: white;
-  background-color: #009688;
   transition: all 0.5s;
+}
+
+.sidebar-items a:hover {
+  color: white;
+  letter-spacing: 5px;
+  background-color: #009688;
 }
 .view-profile {
   background-color: #009688;
@@ -32,6 +36,11 @@
   border-radius: 10px;
   cursor: pointer;
 }
-.view-profile:hover {
-  background-color: #008174;
+.profile-icon {
+  position: absolute;
+  top: 45px;
+  left: 2px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
 }
