--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -2,9 +2,8 @@
   position: fixed;
   width: 100%;
   top: 0;
-  box-shadow: var(--main-box-shadow);
   height: 45px;
-  background-color: var(--main-first-child-bg-color);
+  background-color: #006d77;
   z-index: 999;
   display: flex;
   justify-content: center;
@@ -22,7 +21,7 @@
 }
 
 .topbar li a {
-  color: #008eff;
+  color: #ffffff;
 }
 .opener {
   align-items: center;
@@ -32,24 +31,13 @@
   transition: all ease-in-out 0.6s;
 }
 .logo {
-  font-family: math;
-  text-shadow: 2px 1px 31px #00f9e2;
+  /* the app logo*/
+  font-family: serif;
+  text-shadow: 3px 3px 1px #586766;
   font-weight: 600;
   text-align: center;
-  color: #009688;
+  color: #ffffff;
 }
-.view-profile-icon {
-  display: flex;
-  /* justify-content: end; */
-}
-/* .view-profile-icon img {
-  width: 45px;
-  height: 45px;
-  border-radius: 50%;
-  position: absolute;
-  right: 9px;
-  top: 0;
-} */
 
 .menu {
   height: 100vh;
@@ -59,4 +47,28 @@
   background: white;
   width: 230px;
   transition: all ease-in-out 0.5s;
+}
+.middle-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.middle-links li a {
+  transition: all ease-in-out 0.5s;
+  padding: 3px;
+}
+.middle-links a:hover {
+  transition: all 1s;
+  border-bottom: 1px white solid;
+}
+.middle-links li {
+  list-style-type: none;
+}
+.middle-links .join-btns {
+  flex-grow: 1;
+  display: flex;
+  justify-content: end;
+}
+.middle-links .join-btns a {
+  margin: 5px;
 }
