--- a/client/src/index.css
+++ b/client/src/index.css
@@ -70,7 +70,7 @@ body {
   top: 4px;
   width: 40px;
   height: 3px;
-  background: blue;
+  background: white;
   transition: all ease-in-out 0.5s;
 }
 .nav-btn .line-two {
@@ -79,14 +79,14 @@ body {
 
   width: 40px;
   height: 3px;
-  background: blue;
+  background: white;
 }
 .nav-btn .line-three {
   bottom: 4px;
   transition: all ease-in-out 0.5s;
   width: 40px;
   height: 3px;
-  background: blue;
+  background: white;
 }
 .move-nav-icon {
   transform: translateX(-180px);
@@ -179,7 +179,7 @@ body {
   /* background-color: #fff; */
 }
 .candidates-btn {
-  /* background: darkblue; */
+  /* background: darkwhite; */
 }
 
 /* finish home page */
@@ -198,30 +198,7 @@ body {
   right: 0;
 }
 /* menu finish */
-.job-list-title,
-.developer-list-title,
-.hight-pay-jobs-title {
-  letter-spacing: 5px;
-  /* font-family: cursive; */
-  /* border-radius: 5px; */
-  text-align: center;
-}
 
-/* jobs */
-.jobs-title {
-  letter-spacing: 7px;
-  /* position: absolute; */
-  /* top: -20px; */
-  width: 100%;
-}
-.job-img {
-  height: 100px;
-  width: 100px;
-}
-.profile-icon {
-  height: 100px;
-  width: 100px;
-}
 .job-container {
   /* margin-left: 50px; */
 }
