--- a/client/src/components/company_components/styles/header.css
+++ b/client/src/components/company_components/styles/header.css
@@ -23,9 +23,18 @@
 }
 .company-logo .company-title {
   color: #006d77;
-  font-family: serif;
-  font-weight: 600;
-  text-align: center;
+    font-family: serif;
+    font-weight: 600;
+    text-align: center;
+    
+  }
+  .company-logo .name{
+ flex-grow: 1;
+    margin: 3px;
+    position: relative;
+    background: #edf2e8;
+    border-radius: 5px;
+    padding: 10px 25px 0 0;
 }
 .company-logo .moto {
   position: relative;
@@ -39,7 +48,7 @@
   padding: 5px;
   border-radius: 5px;
   color: #686868;
-  background: #f3f3f3;
+  background: #f3f3f3; position: relative;
 }
 .company-logo .moto .moto-body::first-letter {
   color: blue;
@@ -50,14 +59,14 @@
 }
 .settings-box {
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   position: absolute;
   right: 3px;
   align-content: flex-end;
 }
 .moto .header {
 }
-.settings-box .settings-icon {
+.settings-icon {
   font-size: 34px;
   padding: 1px;
   cursor: pointer;
@@ -65,7 +74,7 @@
   border: 1px rgb(207, 228, 217) solid;
   transition: background ease-in-out 0.5s;
 }
-.settings-box .settings-icon:hover {
+.settings-icon:hover {
   background: #ebffd7;
 }
 .no-comapny-values-message h4 {
@@ -85,7 +94,7 @@
   transition: all ease-in-out 0.5s;
   z-index: 99;
   height: 200px;
-  background: #edf2e8;
+  background: #ffffff;
   width: 360px;
   box-shadow: var(--main-box-shadow);
   transform: scale(1.5);
@@ -94,6 +103,7 @@
   align-items: center;
   flex-direction: column;
   padding: 2px;
+  border-radius: 10px;
 }
 
 .add-values-form textarea {
@@ -113,6 +123,7 @@
   background: white;
   border-radius: 2px;
   cursor: pointer;
+  position: absolute;
 }
 .overlay {
   position: absolute;
