--- a/client/src/components/company_components/styles/slider.css
+++ b/client/src/components/company_components/styles/slider.css
@@ -10,7 +10,6 @@
 .slides-container {
   display: flex;
   overflow: hidden;
-  height: 100%;
   padding: 0;
   flex-grow: 1;
   border-radius: 10px;
@@ -18,6 +17,7 @@
 .photo-slider .slide {
   transition: all ease-in-out 1s;
   margin: 5px 0;
+  height: 54vh;
 }
 
 .photo-slider .controls {
@@ -60,7 +60,7 @@
 }
 .photo-slider img {
   width: 100%;
-  height: 350px;
+  height: 100%;
   object-fit: cover;
   border-radius: 10px;
 }
