--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -3,7 +3,7 @@
   width: 100%;
   top: 0;
   height: 45px;
-  background-color: #006d77;
+  background-color: #0fc962;
   z-index: 999;
   display: flex;
   justify-content: center;
@@ -67,7 +67,7 @@
 .middle-links .join-btns {
   flex-grow: 1;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 .middle-links .join-btns a {
   margin: 5px;
