--- a/client/src/components/jobs/styles/latestJobs.css
+++ b/client/src/components/jobs/styles/latestJobs.css
@@ -20,12 +20,23 @@
   box-shadow: var(--main-box-shadow);
   border-radius: 10px;
 }
-
-@media only screen and (max-width: 600px) {
-  .latest-jobs {
-    grid-template-columns: 99%;
-  }
+ .msg {
+top: 15vh;
+    position: fixed;
+    place-self: center;
+    z-index: 9999;
+     
+    background: #ffffff;
+    width: -moz-fit-content;
+ 
+    box-shadow: var(--main-box-shadow);
+    color: #0fc962;
+    border-radius: 10px;
+    transform: scale(1.5);
+    padding: 0 5px;
+ 
 }
+
 .job-list-title {
   color: #006d77;
   letter-spacing: 5px;
@@ -41,17 +52,48 @@
   text-align: center;
   font-family: serif;
 }
+.job-container .job-title {
+    padding: 2px 5px;
+    background: #22ab22;
+    font-weight: 600;
+    border-radius: 5px;
+
+}
+
 .job-container .company-name {
-  background: #edf2e8;
-  width: 100%;
-  padding: 1px 10px;
-  color: #22ab22;
-  font-weight: 600;
-  border-radius: 5px;
-  transition: all ease-in-out 0.5s;
+  transition: all 0.5s;
+color: blue;
+font-weight: 600;
+}
+.pointer-parent{
+     box-shadow: 0 0 15px -2px #0a1c57;
+    transform: scale(1.2);
+    position: absolute;
+    top: 3px;
+    background: white;
+    width: fit-content;  
+    width: fit-content;
+    border-radius: 5px;    z-index: 999;
+    background: #ffffff;
+}
+.show-profile{
+  transition: all 0.5s;
+  color: #212121;    font-size: 12px;
+ z-index: 999;
+}
+.pointer{
+        width: 13px;
+    height: 13px;
+    position: absolute;
+    left: 56px;
+    top: 18px;
+    background: #ffffff;
+    transform: rotate(45deg);
 }
 .job-container .company-name:hover {
-  color: #00cc00;
+  color: rgb(0, 0, 139);
+  letter-spacing: 1px;
+
 }
 .job-container {
   padding: 10px;
@@ -68,6 +110,21 @@
   overflow: hidden;
   margin: 5px;
   border-radius: 5px;
+}
+.latest-jobs-options{
+      right: 23px;
+    width: 4px;
+    top: 2px; position: absolute;
+}
+.latest-jobs-options .icon:hover{
+      background-color: green;
+}
+.latest-jobs-options .icon{
+    cursor: pointer;
+  transition: all 0.5s;
+  color: #ffffff;
+  border-radius: 5px;
+ 
 }
 .job-container p::first-letter {
   font-size: large;
@@ -96,11 +153,11 @@
   align-items: center;
 }
 .job-container .salary {
-  color: green;
-  /* width: fit-content; */
-  padding: 2px;
-  background: #edf2e8;
-  border-radius: 5px;
+    color: #0fc962;
+    padding: 2px;
+    background: #ffffff;
+    font-weight: 600;
+    border-radius: 5px;
 }
 .footer {
   background: #edf2e8;
@@ -133,4 +190,9 @@
 }
 .footer button.apply:hover {
   background-color: rgb(70, 70, 252);
+}
+@media only screen and (max-width: 600px) {
+  .latest-jobs {
+    grid-template-columns: 99%;
+  }
 }
