--- a/client/src/components/jobs/styles/singleJob.css
+++ b/client/src/components/jobs/styles/singleJob.css
@@ -2,25 +2,9 @@
   justify-content: center;
    min-height: 100vh;
   margin: 0;
-  margin-top: 45px;
+  margin-top: 37px;
 }
- .msg {
- top: 31vh;
-    position: fixed;
-    place-self: center;
-    z-index: 9999;
-    left: 50px;
-    background: #ffffff;
-    width: -moz-fit-content;
-    width: fit-content;
-    font-weight: 600;
-    box-shadow: var(--main-box-shadow);
-    color: #ff0000;
-    border-radius: 10px;
-    transform: scale(1.5);
-    padding: 5px;
-    font-family: fangsong;
-}
+
 .single-job .experience-needed , .single-job .education, .single-job .perks .single-job .working-days{
      display: flex;
     flex-direction: column;
@@ -43,18 +27,22 @@ list-style-type: none
 
 .single-job .working-days li{
 font-weight: 600;
- letter-spacing: 3px;
+ letter-spacing: 1px;
 list-style-type: none
 }
 .single-job div {
   background: var(--main-child-bg-color);
   padding: 5px;
   border-radius: 5px;
-  margin: 10px;
+  margin: 5px;
   height: fit-content;
 }
 .single-job .details{
-  
+  background: transparent;
+}
+.single-job .details div{
+     box-shadow: var(--main-box-shadow);
+    min-height: 160px;
 }
 .single-job .more-details{
 background-color: var(--main-bg-color);
@@ -79,6 +67,14 @@ background-color: var(--main-bg-color);
     font-size: 15px;
 
  }
+ .header{
+   position: relative;
+   padding-right: 10px;
+ }
+ /* .single-job .apply-btn{
+   position: absolute;
+   left: 0; bottom: 0;
+  } */
  .single-job .header .title
  {
 color: rgb(0, 197, 33);
