--- a/client/src/components/posts/styles/posts.css
+++ b/client/src/components/posts/styles/posts.css
@@ -1,9 +1,10 @@
 .posts {
 }
 .posts .posts-container {
-  display: grid;
-  grid-template-columns: 35% 30% 30%;
-  grid-gap: 20px;
+     display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-gap: 10px;
+    padding-bottom: 30px;
 }
 @media only screen and (max-width: 600px) {
   .posts-container {
@@ -44,6 +45,35 @@
   padding: 10px;
   text-align: center;
   margin: 5px;
+}
+.posts .author-photo{
+      width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px #0fc962 solid;
+    padding: 0;
+}
+.posts  .post{
+  position: relative;
+}
+.posts .latest-posts-options{
+       right: 13px;
+    width: 25px;
+    top: 4px;
+    position: absolute;
+    color: #0fc962;
+    border-radius: 5px;
+    background: #edf2e8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all ease-in-out 0.5s;
+    cursor: pointer;
+  }
+  .posts .latest-posts-options:hover{
+    color: #0fc962;
+  background: #d9f3be;
+
 }
 /* /////////////////////// */
 @media only screen and (max-width: 800px) {
