--- a/client/src/screens/authUI/register.css
+++ b/client/src/screens/authUI/register.css
@@ -189,3 +189,21 @@ form .profile-type div input:hover {
   justify-content: space-around;
   margin-top: 12px;
 }
+.photo{
+  color: red;
+}
+.user-photo{
+     color: #ea00ff;
+    font-size: 2rem !important;
+    cursor: pointer;
+    background: #edf2e8;
+    border-radius: 3px;
+    padding: 1px;
+}
+
+.user-photo:hover{
+     color: #a200b1;
+    
+    background: #e8f7d9;
+    
+}
