--- a/client/src/components/jobs/styles/singleJob.css
+++ b/client/src/components/jobs/styles/singleJob.css
@@ -1,16 +1,39 @@
 .single-job {
-  justify-content: center;
-   min-height: 100vh;
-  margin: 0;
-  margin-top: 37px;
+    justify-content: center;
+    min-height: 100vh;
+    margin: 0;
+    background: #f9fbf7;
+    margin-top: 35px;
 }
 
-.single-job .experience-needed , .single-job .education, .single-job .perks .single-job .working-days{
-     display: flex;
+.single-job .experience-needed ,
+ .single-job .education, 
+ .single-job .perks,
+  .single-job .working-days{
+    display: flex;
     flex-direction: column;
-     margin: 5px;
-    color: #795548;
+    box-shadow: 0px 0px 26px -26px #0027ff;
+    color: #607d8b;
+    margin: 4px;
+    background: #ffffff;
+    border-radius: 10px;
+    padding: 5px;
 }
+
+.single-job .details-parent, 
+.single-job .more-details, 
+.single-job header{
+    background: var(--main-child-bg-color);
+    border-radius: 5px;
+    margin: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+ .experience-needed{
+   border-radius: 50% !important;
+   justify-content: center;
+   align-items: center;
+ }
 .single-job .experience h6,
  .single-job .education h6,
   .single-job .perks h6,
@@ -23,22 +46,22 @@ color: rgb(0, 197, 33);
 letter-spacing: 3px;
 list-style-type: none
 }
- 
-
 .single-job .working-days li{
 font-weight: 600;
  letter-spacing: 1px;
 list-style-type: none
 }
-.single-job div {
-  background: var(--main-child-bg-color);
-  padding: 5px;
-  border-radius: 5px;
-  margin: 5px;
-  height: fit-content;
-}
+ 
 .single-job .details{
-  background: transparent;
+
+    background: #f9fbf7;
+    padding: 5px;
+    display: flex;
+    justify-content: center;
+    color: green;
+    align-items: center;
+    font-family: ui-sans-serif;
+    font-weight: 600;
 }
 .single-job .details div{
      box-shadow: var(--main-box-shadow);
@@ -67,16 +90,17 @@ background-color: var(--main-bg-color);
     font-size: 15px;
 
  }
- .header{
-   position: relative;
-   padding-right: 10px;
- }
+ header{
+  position: relative;
+    justify-content: center;
+    align-items: center;
+}
  /* .single-job .apply-btn{
    position: absolute;
    left: 0; bottom: 0;
   } */
- .single-job .header .title
+ .single-job header .title
  {
-color: rgb(0, 197, 33);
+color: #002397
 
  }
