--- a/client/src/components/jobs/styles/postJob.css
+++ b/client/src/components/jobs/styles/postJob.css
@@ -37,11 +37,21 @@
   font-size: 20px;
   font-family: serif;
 }
-.add-new-job .select-parent,
+
 .add-new-job .salary-parent {
   justify-content: start;
 }
+.selects{
+      background: #edf2e8;
+    padding: 5px;
+    border-radius: 5px;
+}
+.selects .select-parent{
 
+    justify-content: space-around;
+    align-items: center;
+
+}
 .add-new-job .salary-parent input {
   flex: 0;
 }
