--- a/client/src/components/join/join.css
+++ b/client/src/components/join/join.css
@@ -17,14 +17,14 @@
 .join .logout,
 .log-in,
 .sign-up {
-  background: #0a1c57;
-  padding: 1px 5px;
-  cursor: pointer;
-  border-radius: 6px;
-  text-decoration: none;
-  color: white;
-  border: 1px #01ffe2 solid;
-  margin: 5px;
+      background: #0a1c57;
+    width: fit-content;
+    cursor: pointer;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 2px;
+    border: 1px #01ffe2 solid;
+    margin: 5px;
 }
 .join-links .log-in,
 .sign-up {
