--- a/client/src/components/posts/styles/posts.css
+++ b/client/src/components/posts/styles/posts.css
@@ -18,24 +18,40 @@
   border-radius: 5px;
   margin: 7px 0;
   color: #747474;
+  position: relative;
 }
 .posts .info-and-actions {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.posts .info-and-actions span {
-  cursor: pointer;
-  background-color: var(--main-bg-color);
-  padding: 1px 5px;
-  border-radius: 5px;
-  color: #006d77;
-  transition: background ease-in-out 0.5s;
+.posts .info-and-actions span .icon {
+ cursor: pointer;
+    background-color: var(--main-bg-color);
+    border-radius: 5px;
+    color: #006d77;
+    transition: background ease-in-out 0.5s;
+      
 }
-.posts .info-and-actions span:hover {
+.post-date{
+      font-size: 12px;
+    font-family: serif;
+}
+.posts .info-and-actions span .like-icon {  margin-right: 5px;
+    border-radius: 5px;}
+.posts .info-and-actions span .like-icon:hover {
   color: #004147;
   background-color: rgb(220, 255, 246);
 }
+
+.posts .info-and-actions span .unlike{
+  color: rgb(255, 57, 57);
+}
+.posts .info-and-actions span .unlike:hover{
+  background-color: rgb(255, 255, 255);
+  color: rgb(255, 57, 57);
+}
+
 .posts-title {
   color: #006d77;
   letter-spacing: 5px;
@@ -47,14 +63,12 @@
   margin: 5px;
 }
 .posts .author-photo{
-      width: 40px;
+    width: 40px;
     height: 40px;
     border-radius: 50%;
     border: 1px #0fc962 solid;
     padding: 0;
-}
-.posts  .post{
-  position: relative;
+    margin-right: 10px;
 }
 .posts .latest-posts-options{
        right: 13px;
@@ -75,6 +89,22 @@
   background: #d9f3be;
 
 }
+.haslike{
+      color: white;
+    background-color: #0fc962;
+    margin-right: 5px;
+    border-radius: 5px;
+
+}
+.post .interactions{
+  display: flex;
+    justify-content: center;
+    align-items: center;
+    background: white;
+    padding: 3px;
+    border-radius: 5px;
+}
+
 /* /////////////////////// */
 @media only screen and (max-width: 800px) {
   .posts .posts-container {
