--- a/client/src/screens/home/home.css
+++ b/client/src/screens/home/home.css
@@ -1,6 +1,7 @@
 .home {
-  background: var(--main-bg-color);
-  padding: 10px;
-  margin: 0;
-  margin-top: 44px;
+    background: var(--main-bg-color);
+    padding: 10px;
+    margin: 0;
+    margin-top: 44px;
+    /* height: fit-content; */
 }
