--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,7 +26,7 @@ body {
   --main-parent-bg-color: #f5f8f3;
   --main-first-child-bg-color: #f5f8f3;
   --main-child-bg-color: #f9fbf7;
-  --main-input-border: 1px #3f51b5  solid;
+  --main-input-border: 1px #3f51b5 solid;
 }
 
 .align-items {
@@ -160,6 +160,7 @@ body {
 }
 .App {
   background: var(--main-bg-color);
+  margin: 0;
 }
 /* Home////////////////// */
 .home {
