--- a/client/src/components/jobs/styles/latestJobs.css
+++ b/client/src/components/jobs/styles/latestJobs.css
@@ -111,12 +111,13 @@ padding: 10px;
     box-shadow: var(--main-box-shadow);
 }
 .job-container p {
-  height: 80px;
-  width: 100%;
-  padding: 3px;
-  overflow: hidden;
-  margin: 5px;
-  border-radius: 5px;
+height: 100px;
+    width: 100%;
+    padding: 3px;
+    overflow: hidden;
+    margin: 5px;
+    border-radius: 5px;
+    background: #edf2e8;
 }
 .latest-jobs-options{
       right: 23px;
@@ -160,10 +161,12 @@ padding: 10px;
   align-items: center;
 }
 .job-container .salary {
-color: #00ff72;
-    padding: 2px;
-    background: #685d3c;
+    color: #00ff72;
+    padding: 0 3px;
+    margin: 5px 0;
+    background: #3f51b5;
     font-weight: 600;
+    width: -moz-fit-content;
     width: fit-content;
     border-radius: 5px;
 }
