--- a/client/src/components/jobs/styles/latestJobs.css
+++ b/client/src/components/jobs/styles/latestJobs.css
@@ -72,9 +72,11 @@ top: 15vh;
 }
 
 .job-container .name {
-  transition: all 0.5s;
-color: blue;
-font-weight: 600;
+    transition: all 0.5s;
+    color: #03a9f4;
+    font-size: 20px;
+    background: #3f51b51c;
+    border-radius: 5px;
 }
 .pointer-parent{
      box-shadow: 0 0 15px -2px #0a1c57;
