--- a/client/src/components/jobs/styles/hightPayingJobs.css
+++ b/client/src/components/jobs/styles/hightPayingJobs.css
@@ -15,13 +15,19 @@
   /* border-top: 3px #11a876 solid; */
   border-radius: 20px;
 }
-
+.slider-spinner{
+      width: 90%;
+    height: 90%;
+    border-radius: 5px;
+    margin: auto;
+    background: #edf2e8;
+}
 .slider {
   height: 55vh;
   overflow: hidden;
   border-radius: 20px;
-  border-top: 1px #006d77 solid;
-  border-bottom: 1px #006d77 solid;
+  border-top: 1px #3f51b5 solid;
+  border-bottom: 1px #3f51b5 solid;
   display: flex;
   position: relative;
   background-color: rgb(249 251 247);
