--- a/client/src/screens/candidate/devProfile.css
+++ b/client/src/screens/candidate/devProfile.css
@@ -176,7 +176,7 @@
   width: 100%;
   height: 200px;
   border-radius: 10px;
-  background-color: rgb(245 248 243);
+  background-color:#ffffff;
 }
 .edit-profile-actions-parent {
   display: flex;
