--- a/client/src/components/topbar/topbar.css
+++ b/client/src/components/topbar/topbar.css
@@ -54,14 +54,11 @@
     display: flex;
     align-items: center;
     justify-content: end;
+    position: relative;
 }
 .middle-links li a {
   transition: all ease-in-out 0.5s;
   padding: 3px;
-}
-.middle-links a:hover {
-  transition: all 1s;
-  border-bottom: 1px white solid;
 }
 .middle-links li {
   list-style-type: none;
