--- a/client/src/components/posts/styles/posts.css
+++ b/client/src/components/posts/styles/posts.css
@@ -52,15 +52,15 @@
   color: rgb(255, 57, 57);
 }
 
-.posts-title {
-  color: #006d77;
-  letter-spacing: 5px;
-  font-weight: 600;
-  font-family: sans-serif;
-  font-size: 30px;
-  padding: 10px;
-  text-align: center;
-  margin: 5px;
+.posts-title,.job-list-title {
+    color: #3f51b5;
+    letter-spacing: 2px;
+    font-weight: 600;
+    font-family: sans-serif;
+    font-size: 20px;
+    padding: 10px;
+    text-align: center;
+    border-bottom: 1px #7e8de1 solid;
 }
 .posts .author-photo{
     width: 40px;
