--- a/client/src/components/jobs/styles/hightPayingJobs.css
+++ b/client/src/components/jobs/styles/hightPayingJobs.css
@@ -1,8 +1,18 @@
 .high-paying-jobs-parent {
-padding: 10px;
-    background-color: #3f51b5;
+     background-color: #3f51b5;
     border-radius: 10px;
     height: 70vh;
+    position: relative
+}
+.high-paying-jobs-parent header{
+      display: flex;
+    justify-content: space-between;
+    align-items: center;
+ 
+  }
+  .high-paying-jobs-parent h2{
+  color: #3f51b5;
+      margin-left: 15px;
 }
 .high-paying-jobs-title {
   color: #ffffff;
@@ -15,6 +25,7 @@ padding: 10px;
   /* border-top: 3px #11a876 solid; */
   border-radius: 20px;
 }
+
 .slider-spinner{
       width: 90%;
     height: 90%;
