--- a/client/src/components/jobs/styles/slider.css
+++ b/client/src/components/jobs/styles/slider.css
@@ -1,27 +1,27 @@
-.left-arrow,
-.right-arrow {
+
+ .high-paying-jobs-parent .arrow {
     cursor: pointer;
     transition: all ease-in-out 0.5s;
     color: rgb(63 81 181);
-    border-radius: 50%;
+    border-radius: 50px;
     padding: 1px;
-    z-index: 2;
+    background: white;
 }
- 
-
+.high-paying-jobs-parent .arrows{
+position: absolute;
+    bottom: -2px;
+    display: flex;
+    justify-content: space-between;
+    /* background: #eff3eb47; */
+    z-index: 999;
+    width: 95%;
+    padding: 3px;
+    margin: 5px 0;
+    border-radius: 5px;
+}
 .right-arrow:hover {
   background-color: rgb(233, 231, 231);
 }
 .left-arrow:hover {
   background-color: rgb(233, 231, 231);
-}
-.left-arrow {
- 
-  top: 40%;
-  left: 2px;
-}
-
-.right-arrow {
-   top: 40%;
-  right: 2px;
 }
