--- a/client/src/components/jobs/styles/hightPayingJobs.css
+++ b/client/src/components/jobs/styles/hightPayingJobs.css
@@ -1,14 +1,13 @@
 .high-paying-jobs-parent {
      background-color: #3f51b5;
     border-radius: 10px;
-    height: 70vh;
+    height: 63vh;
     position: relative
 }
 .high-paying-jobs-parent header{
-      display: flex;
+    display: flex;
     justify-content: space-between;
-    align-items: center;
- 
+    align-items: start;
   }
   .high-paying-jobs-parent h2{
   color: #3f51b5;
@@ -26,39 +25,29 @@
   border-radius: 20px;
 }
 
-.slider-spinner{
-      width: 90%;
-    height: 90%;
-    border-radius: 5px;
-    margin: auto;
-    background: #edf2e8;
-}
-.slider {
-  height: 55vh;
-  overflow: hidden;
-  border-radius: 20px;
-  border-top: 1px #3f51b5 solid;
-  border-bottom: 1px #3f51b5 solid;
-  display: flex;
-  position: relative;
-  background-color: rgb(249 251 247);
-}
-.slide {
-  transition: all ease-in-out 1s;
-}
-.slider {
-  overflow: hidden;
-}
+
 .hight-pay-job-img {
-object-fit: contain;
-    width: 75px;
-    height: 75px;
+    object-fit: cover;
+    width: 100%;
+    height: 80px;
     border-radius: 10px;
-    border: 3px #3f51b5 solid;
+    border: 1px #3f51b5 solid;
+    align-self: start;
 }
 .high-paying-jobs-parent .company-name {
   margin: 10px;
   text-align: center;
 }
 .High-paying-job-description {
+}
+.high-paying-jobs-parent header .company-info{
+    padding: 5px;
+    margin: 5px;
+    background: #edf2e8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 5px;
+    width: max-content;
 }
